tests/src/frontend/syntax/invalid/lvalue_double_bang.sk
fun main(): String {
  !!x = 42;
  "Fail"
}

